fixed View all btn and scale overlaping

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -26,6 +26,10 @@
 
     font-size: 16px;
     line-height: 27px;
+
+    @include on-desktop{
+      width: 324px;
+    }
   }
 
   &--form-submit {
