--- a/src/styles/blocks/product.scss
+++ b/src/styles/blocks/product.scss
@@ -17,7 +17,7 @@
       height: 100%;
       object-fit: cover;
 
-    @include hover(transform, scale(1.2));
+    @include hover(transform, scale(1.05));
     }
   }
 
