--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
 
-    @include hover(transform, scale(1.2));
+    @include hover(transform, scale(1.05));
   }
 
   &__logo-link {
