--- a/src/styles/utils/mixin.scss
+++ b/src/styles/utils/mixin.scss
@@ -60,7 +60,7 @@
       width: fit-content;
 
       transition: transform $transition-duration;
-      transform: scale(1.2);
+      transform: scale(1.1);
       @content;
   }
 }
